[package]
name = "jrl"
version = "0.1.0"
edition = "2024"
description = "Journaling terminal app that prompts you questions from time to time when opening a new terminal and allows you to rate, describe and take notes of your day, as well as view past entries"
license = "MIT"

[dependencies]
chrono = "0.4.42"
clap = {version = "4.5.53", features = ["derive"]}
crossterm = "0.29.0"
home = "0.5.12"
rand = "0.9.2"
reedline = "0.44.0"
rustyline = "17.0.2"
xxhash-rust = {version = "0.8.15", features = ["xxh3"]}
